Reading from backend

--- a/myProjects/photoTree/tree/templates/tree/tree.html
+++ b/myProjects/photoTree/tree/templates/tree/tree.html
@@ -20,11 +20,19 @@
         {% endif %}
 -->
         <script>
+            let data;
             $.ajax(
                 {
                     type: "GET",
-                    url: "/getNodes",
-
+                    //url: "/getNodes",
+                    url: "{% url 'getNodes' %}",
+                    success: function (response) {
+                        data = response;
+                        console.log(data);
+                    },
+                    error: function (response) {
+                        console.log(response);
+                    }
                 }
             )
         </script>
