--- a/myProjects/photoTree/tree/templates/tree/tree.html
+++ b/myProjects/photoTree/tree/templates/tree/tree.html
@@ -20,48 +20,25 @@
         {% endif %}
 -->
         <script>
-            let data;
-            //debugger
-
-            function get_data () {
-                let data = null;
-                $.ajax(
-                    {
-                        type: "GET",
-                        //url: "/getNodes",
-                        url: "{% url 'getNodes' %}",
-                        success: function (response) {
-                            data = response;
-                            console.log(data)
-                        },
-                        error: function (response) {
-                            console.log(response);
-                        }
+        let data = null;
+        $.ajax(
+            {
+                type: "GET",
+                url: "{% url 'getNodes' %}",
+                success: function (response) {
+                    data = JSON.parse(response);
+                    for (let i = 0; i < data.length; ++i) {
+                        data[i] = data[i].fields
                     }
-                )
-                return data;
-            }
-            //debugger
-
-            data = get_data()
-
-
-            /*
-            $.ajax(
-                {
-                    type: "GET",
-                    //url: "/getNodes",
-                    url: "{% url 'getNodes' %}",
-                    success: function (response) {
-                        data = response;
-                        console.log(data)
-                    },
-                    error: function (response) {
-                        console.log(response);
-                    }
+                    console.log(data)
+                },
+                error: function (response) {
+                    console.log(response);
                 }
-            )
-            */
+            }
+        )
+
+        console.log(data)
 
         </script>
 
