--- a/myProjects/photoTree/tree/templates/tree/tree.html
+++ b/myProjects/photoTree/tree/templates/tree/tree.html
@@ -40,10 +40,14 @@
                 test[i] = test[i].fields;
             }
 
+            console.log(test)
             return test
         }
 
+        let data = getData();
+        console.log(data)
 
+/*
         function getResult() {
             getData()
             .then(response => {
@@ -51,10 +55,7 @@
             })
 
         }
-
-        let data = getResult();
-
-        console.log(data)
+*/
 
 
 /*
