--- a/myProjects/photoTree/tree/templates/tree/chart.html
+++ b/myProjects/photoTree/tree/templates/tree/chart.html
@@ -3,6 +3,7 @@
   <head>
     <title>Chart</title>
     <link rel="stylesheet" href="../../static/tree/CSS/chart.css" />
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
   </head>
 
   <body>
