--- a/myProjects/photoTree/tree/templates/tree/refactor.html
+++ b/myProjects/photoTree/tree/templates/tree/refactor.html
@@ -9,6 +9,25 @@
 
   <body>
 
+    <div>
+      <div style="width: 100%; background-color: #6486bd">
+        <button onclick="startEmpty()">Empty Tree</button>
+      </div>
+      <div
+        style="
+          width: 100%;
+          height: 100px;
+          background-color: #6486bd; /*rgb(61, 177, 173)*/
+          font-family: Arial;
+          padding: 3px;
+          font-size: 24px;
+          text-align: center;
+        "
+      >
+        <h1 style="color: white">Interactive Family Tree</h1>
+      </div>
+    </div>
+
     <figure class="css-chart" style="--widget-size: 1200px">
       <ul id="chart" class="line-chart"></ul>
       <div id="hover-menu"></div>
@@ -22,7 +41,7 @@
       <div id="confirmBox" class="confirm-box"></div>
     </div>
 
-    <script src="../../static/tree/JS/refactor.js"></script>
+    <script src="../../static/tree/JS/website.js"></script>
   </body>
 </html>
 
