--- a/myProjects/photoTree/tree/templates/tree/refactor.html
+++ b/myProjects/photoTree/tree/templates/tree/refactor.html
@@ -41,7 +41,7 @@
       <div id="confirmBox" class="confirm-box"></div>
     </div>
 
-    <script src="../../static/tree/JS/website.js"></script>
+    <script src="../../static/tree/JS/multiTree.js"></script>
   </body>
 </html>
 
