--- a/myProjects/photoTree/tree/static/tree/CSS/chart.css
+++ b/myProjects/photoTree/tree/static/tree/CSS/chart.css
@@ -274,3 +274,13 @@ body {
 
   box-shadow: #5e5df0 0 10px 20px -10px;
 }
+
+.page-header {
+  width: 100%;
+  height: 100px;
+  background-color: #6486bd; /*rgb(61, 177, 173)*/
+  font-family: Arial;
+  padding: 3px;
+  font-size: 24px;
+  text-align: center;
+}
