--- a/myProjects/photoTree/tree/templates/tree/refactor.html
+++ b/myProjects/photoTree/tree/templates/tree/refactor.html
@@ -30,7 +30,7 @@
 
     <figure id="treeChart" class="css-chart" style="--widget-size: 1200px">
       <ul id="chart" class="line-chart"></ul>
-      <svg id='lines' height=1200 width=2200 style="z-index:-1"></svg>
+      <svg id='lines' height="1200" width="100vh" style="z-index:-1"></svg>
       <div id="hover-menu"></div>
     </figure>
 
