--- a/myProjects/photoTree/tree/templates/tree/refactor.html
+++ b/myProjects/photoTree/tree/templates/tree/refactor.html
@@ -30,7 +30,8 @@
 
     <figure id="treeChart" class="css-chart" style="--widget-size: 1200px">
       <ul id="chart" class="line-chart"></ul>
-      <svg id='lines' height="1200" width="100vh" style="z-index:-1"></svg>
+      <!--FIXME: Don't use hardcoded height and width vals-->
+      <svg id='lines' height="1200" width="2200" style="z-index:-1; overflow:hidden"></svg>
       <div id="hover-menu"></div>
     </figure>
 
