--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -24,7 +24,7 @@
           text-align: center;
         "
       >
-        <h1 style="color: white">Interactive Family Tree</h1>
+        <h1 style="color: white">Photo Family Tree</h1>
       </div>
     </div>
 
