--- a/photoTree/tree/static/tree/CSS/chart.css
+++ b/photoTree/tree/static/tree/CSS/chart.css
@@ -127,7 +127,7 @@
   width: 100%;
   height: flex;
 
-  background-color: #6486bd;
+  background-color: #002e5d;
 }
 
 .node-container {
@@ -278,9 +278,22 @@ body {
 .page-header {
   width: 100%;
   height: 100px;
-  background-color: #6486bd; /*rgb(61, 177, 173)*/
+  background-color: #002e5d; /*rgb(61, 177, 173)*/
   font-family: Arial;
   padding: 3px;
   font-size: 24px;
   text-align: center;
+  /*ADDED*/
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.PageLogo-image {
+  width: 100%;
+}
+
+.Header-logo img {
+  min-height: 20px;
 }
