--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -10,20 +10,11 @@
   <body>
 
     <div>
-      <div style="width: 100%; background-color: #6486bd">
+      <div style="width: 100%; background-color: #002e5d">
         <button onclick="startEmpty()">Empty Tree</button>
       </div>
-      <div
-        style="
-          width: 100%;
-          height: 75px;
-          background-color: #6486bd; /*rgb(61, 177, 173)*/
-          font-family: Arial;
-          padding: 3px;
-          font-size: 24px;
-          text-align: center;
-        "
-      >
+
+      <div class="page-header">
         <h1 style="color: white">Photo Family Tree</h1>
       </div>
     </div>
