Working on header of html

--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -9,12 +9,12 @@
 
   <body>
 
-    <div>
-      <div style="width: 100%; background-color: #002e5d">
+    <div class="page-header">
+      <div style='align-items: left; border: 3px green solid'>
         <button onclick="startEmpty()">Empty Tree</button>
       </div>
 
-      <div class="page-header">
+      <div >
         <h1 style="color: white">Photo Family Tree</h1>
       </div>
     </div>
