--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Chart</title>
+    <meta charset="UTF-8">
+    <title>Photo Family Tree</title>
     <link rel="stylesheet" href="../../static/tree/CSS/chart.css" />
 
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
   </head>
 
   <body>
-
+<!--
+    <ps-header class="Header header-dark-light" data-with-toggle-menu itemscope itemtype="http://schema.org/WPHeader">
+      <!--Header Top
+      <div class="Header-contentTop">
+        <!--Page Logo
+        <div class="Header-logo">
+          <a aria-label="home page" href="https://byu.edu" target="_blank" data-cms-ai="0">
+            <img class="PageLogo-image" src="https://brightspotcdn.byu.edu/e4/0a/b679ee0a41d9b1675fc78cd03239/byu-logo-white-small.svg" alt="BYU">
+          </a>
+        </div>
+        <!--header title, breadcrumbs
+        <div class="Header-titles">
+          <div class="Header-title">
+            <a class="Link" href="https://rll.byu.edu" data-cms-ai="0">Record Linking Lab</a>
+          </div>
+        </div>
+      </div>
+    </ps-header>
+  -->
     <div class="page-header">
       <div style='align-items: left; border: 3px green solid'>
         <button onclick="startEmpty()">Empty Tree</button>
