--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -9,32 +9,17 @@
   </head>
 
   <body>
-<!--
-    <ps-header class="Header header-dark-light" data-with-toggle-menu itemscope itemtype="http://schema.org/WPHeader">
-      <!--Header Top
-      <div class="Header-contentTop">
-        <!--Page Logo
-        <div class="Header-logo">
-          <a aria-label="home page" href="https://byu.edu" target="_blank" data-cms-ai="0">
-            <img class="PageLogo-image" src="https://brightspotcdn.byu.edu/e4/0a/b679ee0a41d9b1675fc78cd03239/byu-logo-white-small.svg" alt="BYU">
-          </a>
-        </div>
-        <!--header title, breadcrumbs
-        <div class="Header-titles">
-          <div class="Header-title">
-            <a class="Link" href="https://rll.byu.edu" data-cms-ai="0">Record Linking Lab</a>
-          </div>
-        </div>
-      </div>
-    </ps-header>
-  -->
+
     <div class="page-header">
+      <!--
       <div style='align-items: left; border: 3px green solid'>
         <button onclick="startEmpty()">Empty Tree</button>
       </div>
+    -->
+      <div><a href="https://rll.byu.edu/" style="text-decoration: none;""><h2 class="header-link">Record Linking Lab</h2></a></div>
 
-      <div >
-        <h1 style="color: white">Photo Family Tree</h1>
+      <div>
+        <h2 style="color: white">Photo Family Tree</h2>
       </div>
     </div>
 
