--- a/photoTree/tree/static/tree/CSS/chart.css
+++ b/photoTree/tree/static/tree/CSS/chart.css
@@ -87,14 +87,14 @@
 .node-image {
   width: 90px;
   height: 90px;
-  margin: 10px;
+  margin: 4px;
 
   border-radius: 50px;
 }
 
 .nodeBox-button {
   background-color: white;
-  border: 5px solid #7ab7e6; /*was light blue*/
+  border: 4px solid #7ab7e6; /*was light blue*/
   border-radius: 65px;
   margin: 7px;
 }
@@ -178,12 +178,14 @@ body {
 
   position: fixed;
   width: 400px;
-  height: 360px;
+  height: 400px;
   z-index: 1;
   top: 50%;
   left: 50%;
-  margin: -100px 0 0 -150px;
+  transform: translate(-50%, -50%);
   background: #9dbef1;
+
+
 }
 
 .menu-pics-container {
@@ -241,4 +243,13 @@ body {
   color: lightgray;
 }
 
-
+.x-button {
+  display:block;
+  height: 30px;
+  width: 30px;
+  border-radius: 100%;
+  border: 2px solid black;
+}
+.x-button:hover {
+  background-color: darkgray;
+}
