--- a/photoTree/tree/static/tree/CSS/chart.css
+++ b/photoTree/tree/static/tree/CSS/chart.css
@@ -30,14 +30,20 @@
   background-color: white;
   border: 5px solid #7ab7e6; /*was light blue*/
   border-radius: 50%;
-  height: 60px; /*height and width originally 12px*/
+  /*height: 60px;*/
+  /*width: 60px;*/
   position: absolute;
-  width: 60px;
+  height: 3rem;
+  width: 3rem;
 
   /* The data points have a radius of 8px and the line segment has a width of 3px, 
     so we split the difference to center the data points on the line segment origins */
+  /*
   bottom: calc(var(--y) - 27.5px);
   left: calc(var(--x) - 30.5px);
+  */
+  bottom: calc(var(--y) - 24px);
+  left: calc(var(--x) - 23px);
 
   /*originals 6.5 px and 9.5 px*/
 }
@@ -217,7 +223,8 @@ body {
 
 .page-header {
   width: 100%;
-  height: 100px;
+  /*height: 100px;*/
+  height: 5rem;
   background-color: #002e5d; /*rgb(61, 177, 173)*/
   font-family: Arial;
   padding: 3px;
@@ -243,6 +250,7 @@ body {
 
 .header-link {
   color: white;
+  text-decoration: none;
 }
 .header-link:hover {
   color: lightgray;
