--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -27,14 +27,14 @@
         <button onclick="startEmpty()">Empty Tree</button>
       </div>
     -->
-      <div><a href="https://rll.byu.edu/" style="text-decoration: none;""><h2 class="header-link">Record Linking Lab</h2></a></div>
+      <div><a href="https://rll.byu.edu/" class="header-link"><h2>Record Linking Lab</h2></a></div>
 
       <div>
         <h2 style="color: white">Photo Family Tree</h2>
       </div>
     </div>
 
-    <figure id="treeChart" class="css-chart" style="--widget-size: 1200px">
+    <figure id="treeChart" class="css-chart" style="--widget-size: 1000px">
       <ul id="chart" class="line-chart"></ul>
       <svg id='lines' height="1200" width="1200" style="z-index:-1; overflow:hidden"></svg>
       <div id="hover-menu"></div>
