--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-
+<!--
     <script>
       $(window).scroll(function(){
         $('#header').css({
@@ -20,7 +20,7 @@
         });
       });
     </script>
-
+  -->
     <div id="header" class="page-header">
       <!--
       <div style='align-items: left; border: 3px green solid'>
@@ -34,11 +34,13 @@
       </div>
     </div>
 
-    <figure id="treeChart" class="css-chart" style="--widget-size: 1000px">
-      <ul id="chart" class="line-chart"></ul>
-      <svg id='lines' height="1000" width="1000" style="z-index:-1; overflow:hidden"></svg>
-      <div id="hover-menu"></div>
-    </figure>
+    <div style="overflow: scroll;">
+      <figure id="treeChart" class="css-chart" style="--widget-size: 1000px">
+        <ul id="chart" class="line-chart"></ul>
+        <svg id='lines' height="1000" width="1000" style="z-index:-1; overflow:hidden"></svg>
+        <div id="hover-menu"></div>
+      </figure>
+    </div>
 
     <div id="center-menu"></div>
 
