--- a/photoTree/tree/static/tree/CSS/chart.css
+++ b/photoTree/tree/static/tree/CSS/chart.css
@@ -24,6 +24,8 @@
   border: 2px solid black;
   
   overflow: scroll;
+
+  zoom: 1;
 }
 
 /* The unordered list holding the data points, no list styling and no spacing */
@@ -85,14 +87,12 @@
 .node-container {
   display: flex;
   flex-wrap: wrap;
-  width: 50%;
+  width: 100%;
 }
 
 .node-image {
-  /*width: 90px;
-  height: 3px;*/
-  height: 3rem;
-  width: 3rem;
+  height: 6rem;
+  width: 6rem;
   margin: 4px;
 
   border-radius: 50px;
@@ -123,10 +123,14 @@
 
 .confirm-box {
   display: flex;
-  /*border: 2px solid black;*/
-  height: 5rem;
-  /*width: 220px;*/
-  width: 150px;
+  height: 8rem;
+  width: 20%;
+
+  justify-content: space-around;
+  align-items: center;
+
+  border: 2px solid black;
+  margin: .5em;
 }
 
 /*testing hover*/
@@ -255,6 +259,7 @@ body {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  height: auto;
   position: relative;
 
   background-color: #002e5d;
