--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -34,19 +34,28 @@
       </div>
     </div>
 
-    <div style="overflow: scroll;">
+    <div style="display: flex;">
       <figure id="treeChart" class="css-chart" style="--widget-size: 1000px">
         <ul id="chart" class="line-chart"></ul>
         <svg id='lines' height="1000" width="1000" style="z-index:-1; overflow:hidden"></svg>
         <div id="hover-menu"></div>
       </figure>
+
+      <div id="confirmBox" class="confirm-box">
+        <p>Clicked nodes come here</p>
+      </div>
+
+      <div>
+        <button onclick="zoomIn()">Zoom In</button>
+        <button onclick="zoomOut()">Zoom out</button>
+      </div>
+
     </div>
 
     <div id="center-menu"></div>
 
     <div id="footer" class="footer-box">
       <div id="nodeContainer" class="node-container"></div>
-      <div id="confirmBox" class="confirm-box"></div>
     </div>
 
     <script src="../../static/tree/JS/multiTree.js"></script>
