--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -25,25 +25,33 @@
 
     <div style="display: flex;">
 
-      <figure id="treeChart" class="css-chart" style="--widget-size: 1000px; zoom: 1;">
-        <ul id="chart" class="line-chart"></ul>
-        <svg id='lines' height="1000" width="1000" style="z-index:-1; overflow:hidden"></svg>
-        <div id="hover-menu"></div>
-      </figure>
-
-      <div>
-        <button class="button-34" onclick="zoomIn()">+</button>
-        <button class="button-34" onclick="zoomOut()">-</button>
-        <button class="button-34" onclick="resetZoom()">&#x21bb</button>
+      <div style="display:flex; width: 80%; height: 80%">
+        <figure id="treeChart" class="css-chart" style="--widget-size: 1000px; zoom: 1;">
+          <ul id="chart" class="line-chart"></ul>
+          <svg id='lines' height="1000" width="1000" style="z-index:-1; overflow:hidden"></svg>
+          <div id="hover-menu"></div>
+        </figure>
       </div>
 
-      <div id="confirmBox" class="confirm-box">
-        <p>Clicked nodes come here</p>
+      <div style="display: flex; flex-direction: column; align-items: center; width: 20%">
+        <div style="display: flex; align-items: center; width: 100%">
+          <div>
+            <button class="zoom-btn" onclick="zoomIn()">+</button>
+            <button class="zoom-btn" onclick="zoomOut()">-</button>
+            <button class="zoom-btn" onclick="resetZoom()">&#x21bb</button>
+          </div>
+
+          <div id="confirmBox" class="confirm-box" style="width: 100%;">
+            <p>Clicked nodes come here</p>
+          </div>
+        </div>
+
+        <div id="menu-position" style="width: 100%;"></div>
       </div>
 
     </div>
 
-    <div id="center-menu"></div>
+    <!--<div id="center-menu"></div>-->
 
     <div id="footer" class="footer-box">
       <div id="nodeContainer" class="node-container"></div>
