--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Photo Family Tree</title>
     <link rel="stylesheet" href="../../static/tree/CSS/chart.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
   </head>
@@ -23,7 +24,7 @@
       </div>
     </div>
 
-    <div style="display: flex;">
+    <div style="display: flex; position: relative;">
 
       <div style="display:flex; width: 80%; height: 80%">
         <figure id="treeChart" class="css-chart" style="--widget-size: 1000px; zoom: 1;">
@@ -33,19 +34,19 @@
         </figure>
       </div>
 
-      <div style="display: flex; flex-direction: column; align-items: center; width: 20%">
-        <!--flex-direction: row; width: 100%">-->
-          <div style="display:flex; justify-content: space-evenly;">
+      <div style="display: flex; flex-direction: column; align-items: center; width: 20%; position: absolute; top: 0; ">
+          <div style="display:flex; flex-direction: column; justify-content: center; position: fixed; left: 0">
             <button class="zoom-btn" onclick="zoomIn()">&#65291</button>
             <button class="zoom-btn" onclick="zoomOut()">&#65293</button>
             <button class="zoom-btn" onclick="resetZoom()">&#x21bb</button>
           </div>
-        <!--</div>-->
-
-        <div id="menu-position" style="width: 100%;"></div>
       </div>
 
+      <div id="menu-position" style="width: 100%; margin: .5em;"></div>
+
     </div>
+
+    <div class="tree-animation"></div>
 
     <!--<div id="center-menu"></div>-->
 
