--- a/photoTree/tree/static/tree/CSS/chart.css
+++ b/photoTree/tree/static/tree/CSS/chart.css
@@ -20,7 +20,7 @@
   /*width: var(--widget-size);*/
   width: 100%;
 
-  border: 2px solid black;
+  border: 4px solid black;
   
   overflow: scroll;
 
@@ -180,21 +180,13 @@ body {
 
 .center-menu {
   padding: 10px;
-  border: 4px solid black;
-  border-radius: 15px;
-
-  /*Added*/
   width: 100%;
+  border-radius: 7px;
 
-  /*position: fixed;
-  width: 400px;
-  height: 400px;
-  z-index: 1;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  */
-  background: #9dbef1;
+  /*background: #9dbef1;*/
+  background: #FAE5A1;
+  border: 4px solid black;
+  
 }
 
 .menu-pics-container {
@@ -276,7 +268,7 @@ body {
   height: 30px;
   width: 30px;
   border-radius: 100%;
-  border: 2px solid black;
+  border: 2.5px solid black;
 }
 .x-button:hover {
   background-color: darkgray;
