--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -53,7 +53,7 @@
 
     <div style="display: flex; position: relative;">
 
-      <div style="display:flex; width: 80%; height: 80%">
+      <div style="display:flex; width: 80%; height: 100%">
         <figure id="treeChart" class="css-chart" style="--widget-size: 1000px; zoom: 1;">
           <ul id="chart" class="line-chart"></ul>
           <svg id='lines' height="1000" width="1000" style="z-index:-1; overflow:hidden"></svg>
@@ -62,20 +62,27 @@
       </div>
 
       <div style="display: flex; flex-direction: column; align-items: center; width: 20%; position: absolute; top: 0; ">
-          <div style="display:flex; flex-direction: column; justify-content: center; position: fixed; left: 0">
+          <div style="display:flex; flex-direction: column; justify-content: center; position: fixed; left: 0;">
             <button class="zoom-btn" onclick="zoomIn()">&#65291</button>
             <button class="zoom-btn" onclick="zoomOut()">&#65293</button>
             <button class="zoom-btn" onclick="resetZoom()">&#x21bb</button>
           </div>
       </div>
 
-      <div id="menu-position" style="width: 100%; margin: .5em;"></div>
+      <div style="display: flex; flex-direction: column; align-items: center; margin: .25em; width: 20%; border: 3px solid green;">
+        <div id="menu-position" style="width: 100%; height: 40%"></div>
+
+        <div style="display: flex; width: 100%; height: 60%; position: relative;">
+          <figure id="tree-holder" class="tree-container">
+            <ul id="tree-holder-chart" class="line-chart"></ul>
+            <svg id='tree-holder-lines' height="500" width="100%" style="z-index:-1; overflow:hidden"></svg>
+          </figure>
+        </div>
+      </div>
 
     </div>
 
     <!--<div class="tree-animation"></div>-->
-
-    <!--<div id="center-menu"></div>-->
 
     <div id="footer" class="footer-box">
       <div id="nodeContainer" class="node-container"></div>
