--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -44,7 +44,7 @@
         <button onclick="startEmpty()">Empty Tree</button>
       </div>
     -->
-      <div><a href="https://rll.byu.edu/" class="header-link"><h2>Record Linking Lab</h2></a></div>
+      <div><a href="https://rll.byu.edu/" class="header-link" style="text-decoration: none;"><h2>Record Linking Lab</h2></a></div>
 
       <div>
         <h2 style="color: white">Photo Family Tree</h2>
