--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -69,7 +69,7 @@
           </div>
       </div>
 
-      <div style="display: flex; flex-direction: column; align-items: center; margin: .25em; margin-top: 0; margin-bottom: 0; width: 20%; border: 3px solid green;">
+      <div class="side-container">
         <div id="menu-position" style="width: 100%; height: 40%"></div>
 
         <div style="display: flex; width: 100%; height: 60%; position: relative;">
