--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -44,9 +44,13 @@
         <button onclick="startEmpty()">Empty Tree</button>
       </div>
     -->
-      <div><a href="https://rll.byu.edu/" class="header-link" style="text-decoration: none;"><h2>Record Linking Lab</h2></a></div>
+      <div style="margin-right: 5px;">
+        <a href="https://rll.byu.edu/" class="header-link" style="text-decoration: none;">
+          <h2>Record Linking Lab</h2>
+        </a>
+      </div>
 
-      <div>
+      <div style="margin-left: 5px;">
         <h2 style="color: white">Photo Family Tree</h2>
       </div>
     </div>
