Worked on createChart function

--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -37,7 +37,7 @@
   </head>
 
   <!--<body onload="tutorial()">-->
-  <body>
+  <body style="filter: blur(1px);">
 
     <div id="header" class="page-header">
       <!--
